Essayer de corriger les erreurs

--- a/src/pages/blog/design-charte.astro
+++ b/src/pages/blog/design-charte.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../../layouts/BlogPost.astro';
-import heroImage from '../../../public/SAE103/page1.jpg';
+import heroImage from 'portfolio/public/SAE103/page1.jpg';
 ---
 
 <Layout
@@ -33,39 +33,39 @@ import heroImage from '../../../public/SAE103/page1.jpg';
         <div class="gallery-stack">
             
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page1.jpg" alt="Page 1 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page1.jpg" alt="Page 1 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page2.jpg" alt="Page 2 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page2.jpg" alt="Page 2 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page3.jpg" alt="Page 3 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page3.jpg" alt="Page 3 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page4.jpg" alt="Page 4 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page4.jpg" alt="Page 4 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page5.jpg" alt="Page 5 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page5.jpg" alt="Page 5 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page6.jpg" alt="Page 6 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page6.jpg" alt="Page 6 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page7.jpg" alt="Page 7 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page7.jpg" alt="Page 7 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page8.jpg" alt="Page 8 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page8.jpg" alt="Page 8 Charte" loading="lazy" />
             </div>
 
             <div class="page-wrapper">
-                <img src="../../public/SAE103/page9.jpg" alt="Page 9 Charte" loading="lazy" />
+                <img src="portfolio/public/SAE103/page9.jpg" alt="Page 9 Charte" loading="lazy" />
             </div>
 
         </div>
