--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -25,13 +25,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				
 				<div class="action-box">
 					<p>Vous souhaitez conserver mon profil ? Téléchargez mon CV au format PDF.</p>
-					<a href="/portfolio/assets/cv.pdf" download="CV - Tom Marcheron.pdf" class="btn-download">
+					<a href="/portfolio/public/cv.pdf" download="CV - Tom Marcheron.pdf" class="btn-download">
 						<span class="icon">📥</span> Télécharger le CV
 					</a>
 				</div>
 
 				<div class="cv-preview">
-					<img src="/portfolio/assets/cv.pdf" alt="CV de Tom Marcheron" />
+					<img src="/portfolio/public/cv.pdf" alt="CV de Tom Marcheron" />
 				</div>
 
 			</section>
