--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -9,7 +9,7 @@ const projects = [
     {
         title: "Création d'une charte graphique",
         description: "Imagination et conception d'une identité visuelle complète. Définition de la palette de couleurs, choix typographiques et règles d'utilisation sur différents supports.",
-        image: 'public/SAE103/page1.jpg',
+        image: '/portfolio/public/SAE103/page1.jpg',
         tags: ["InDesign", "Identité Visuelle"],
         // Lien vers une page interne (ex: src/pages/projets/portfolio.astro)
         href: "/blog/design-charte" 
@@ -106,7 +106,7 @@ const projects = [
         justify-content: center;
         text-align: center;
         color: white;
-        background-image: url('/public/images/crea.jpg');
+        background-image: url('portfolio/public/images/crea.jpg');
         background-size: cover;
         background-position: center;
     }
