--- a/src/pages/developpement.astro
+++ b/src/pages/developpement.astro
@@ -101,7 +101,7 @@ const projects = [
 		text-align: center;
 		color: white;
 		/* J'ai mis une image de code pour le fond */
-		background-image: url('/public/images/dev.jpg');
+		background-image: url('portfolio/public/images/dev.jpg');
 		background-size: cover;
 		background-position: center;
 	}
