--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<div class="grid">
 					<a href="/developpement" class="card skill-card">
 						<div class="image-bubble">
-							<img src="../../public/images/dev.jpg" alt="Développement Web" />
+							<img src="/portfolio/public/images/dev.jpg" alt="Développement Web" />
 						</div>
 						<h3>Développement Web</h3>
 						<p>HTML, CSS, PHP et JS</p>
@@ -59,7 +59,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 					<a href="/communication" class="card skill-card">
 						<div class="image-bubble">
-							<img src="../../public/images/com.jpg" alt="Communication Web" />
+							<img src="/portfolio/public/images/com.jpg" alt="Communication Web" />
 						</div>
 						<h3>Communication Web</h3>
 						<p>SEO, Réseaux sociaux et Stratégie de contenu</p>
@@ -68,7 +68,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 					<a href="/design" class="card skill-card">
 						<div class="image-bubble">
-							<img src="../../public/images/crea.jpg" alt="Design Multimédia" />
+							<img src="/portfolio/public/images/crea.jpg" alt="Design Multimédia" />
 						</div>
 						<h3>Design Multimédia</h3>
 						<p>Création d'interfaces, logos et identités visuelles</p>
@@ -77,7 +77,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 					<a href="/light" class="card skill-card">
 						<div class="image-bubble">
-							<img src="../../public/images/light.jpg" alt="Éclairage Scénique" />
+							<img src="/portfolio/public/images/light.jpg" alt="Éclairage Scénique" />
 						</div>
 						<h3>Éclairage Scénique</h3>
 						<p>Régie lumière, DMX et Conception scénique</p>
